[tool.poetry]
name = "resercheragents"
version = "0.1.0"
description = "ResercherAgents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }


[tool.poetry.scripts]
resercheragents = "resercheragents.main:run"
run_crew = "resercheragents.main:run"
train = "resercheragents.main:train"
replay = "resercheragents.main:replay"
test = "resercheragents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
